# dev4one-fsoo

./: CMakeLists.txt  README.md  Report-Campus.pptx
dlib/image_processing/: object_detector.h  scan_fhog_pyramid.h
dlib/image_transforms/: fhog.h  spatial_filtering.h
docs/: docs.md
src/: CMakeLists.txt  main.cpp  orig_face_swap.cpp  util.h
src/dlib_sycl/image_processing/: frontal_face_detector.h
src/sycl/: image_processing.h  onevpl_video_process.h
